# franken-stream

./: .gitignore  CLI_DEMO.md  COMPLETION_REPORT.md  DELIVERY_SUMMARY.md  ENHANCEMENTS.md  FINAL_IMPROVEMENTS.md  IMPROVEMENTS_LOG.md  INDEX.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  README_FULL.md  SETUP_GUIDE.md  STATUS.md  TUI_GUIDE.md  providers.json  providers.json.example  pyproject.toml  requirements.txt  test_demo.py  test_enhanced.py
franken_stream/: __init__.py  main.py  providers.py  scraper.py  tui.py
